--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div>
                             <img src="images/home/icon1.png" alt="">
                         </div>
-                        <h2>Incredibly Responsive</h2>
+                        <h2 class="fw-500">Incredibly Responsive</h2>
                         <p>Ground round tenderloin flank shank ribeye. Hamkevin meatball swine. Cow shankle beef sirloin chicken ground round.</p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <div>
                             <img src="images/home/icon2.png" alt="">
                         </div>
-                        <h2>Superior Typography</h2>
+                        <h2 class="fw-500">Superior Typography</h2>
                         <p>Hamburger ribeye drumstick turkey, strip steak sausage ground round shank pastrami beef brisket pancetta venison.</p>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         <div>
                             <img src="images/home/icon3.png" alt="">
                         </div>
-                        <h2>Swift Page Builder</h2>
+                        <h2 class="fw-500">Swift Page Builder</h2>
                         <p>Venison tongue, salami corned beef ball tip meatloaf bacon. Fatback pork belly bresaola tenderloin bone pork kevin shankle.</p>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="action take-tour">
                         <div class="col-sm-7 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
-                            <h1 class="title">Triangle Corporate Template</h1>
+                            <h1 class="title fw-500">Triangle Corporate Template</h1>
                             <p>A responsive, retina-ready &amp; wide multipurpose template.</p>
                         </div>
                         <div class="col-sm-5 text-center wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
@@ -174,7 +174,7 @@
                 <div class="col-sm-12">
                     <div class="clients text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                         <p><img src="images/home/clients.png" class="img-responsive" alt=""></p>
-                        <h1 class="title">Happy Clients</h1>
+                        <h1 class="title fw-500">Happy Clients</h1>
                         <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud </p>
                     </div>
                     <div class="clients-logo wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="testimonial bottom">
-                        <h2>Testimonial</h2>
+                        <h2 class="fw-500">Testimonial</h2>
                         <div class="media">
                             <div class="pull-left">
                                 <a href="#"><img src="images/home/profile1.png" alt=""></a>
@@ -234,14 +234,14 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="contact-info bottom">
-                        <h2>Contacts</h2>
+                        <h2 class="fw-500">Contacts</h2>
                         <address>
                         E-mail: <a href="mailto:someone@example.com">email@email.com</a> <br> 
                         Phone: +1 (123) 456 7890 <br> 
                         Fax: +1 (123) 456 7891 <br> 
                         </address>
 
-                        <h2>Address</h2>
+                        <h2 class="fw-500">Address</h2>
                         <address>
                         Unit C2, St.Vincent's Trading Est., <br> 
                         Feeder Road, <br> 
@@ -252,7 +252,7 @@
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
-                        <h2>Send a message</h2>
+                        <h2 class="fw-500">Send a message</h2>
                         <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" required="required" placeholder="Name">
